solve mobile and desktop viewports. no overlap of tweet headers, proper margins

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -43,9 +43,10 @@ body {
   flex-direction: column;
   align-items: center;
   background-color: inherit;
- }
+}
 
- @media only screen and (min-width:1024px) {
+/* Desktop 1024px Views */
+@media only screen and (min-width:1024px) {
   .desktop-container {
     display: flex;
     flex-flow: row nowrap;
@@ -68,10 +69,9 @@ body {
     margin-top: 160px;
   }
 
-  .desktop-container .tweet-articles {
-
+  .desktop-container .new-tweet {
+    margin-top: 0px;
   }
 
-
- }
+}
 
