--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -26,8 +26,8 @@ nav {
   justify-content: center;
 }
 
-/* screens less than 420px wides */
-@media only screen and (max-width: 420px) {
+/* Phone screens less than 425px wides */
+@media only screen and (max-width: 425px) {
   .new-tweet-blurb span {
     font-size: 0px;
   }
@@ -38,6 +38,12 @@ nav {
   nav {
     flex-direction: column;
     align-items: center;
+  }
+
+  .tweet-container .tweet-articles header {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: flex-start ;
   }
 }
 
