--- a/public/styles/tweet-container.css
+++ b/public/styles/tweet-container.css
@@ -36,7 +36,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  height: 60px;
+  height: 2em;
 }
 
 .profile-icon {
